--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@azure/identity": "^4.13.0",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.556.0",
     "mongoose": "^9.0.1",
     "next": "16.0.7",
     "next-auth": "^4.24.13",
