--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "mongoose": "^9.0.1",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -28,7 +28,7 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.7",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
