--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^9.0.1",
     "next": "16.0.7",
     "next-auth": "^4.24.13",
+    "pdf-lib": "^1.17.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "uuid": "^13.0.0"
