--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "uuid": "^13.0.0",
     "zod": "^4.1.13"
   },
